--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <section class="container-fluid">
     <div class="container">
         <div class="nav-bar">
-            <h1>DifiFraudInsidersSubmit</h1>
+            <h1>DigiFraudInsidersSubmit</h1>
             <ul>
                 <li><a href="#">Overview</a></li>
                 <li><a href="#">Key Discussion</a></li>
@@ -148,7 +148,7 @@
     <div class="container">
         <div class="Speakers">
             <h1>SPEAKERS</h1>
-            <div class="speaker-elem">
+            <div class="speaker-elem Slider">
 
                 <div class="photo-layout cir-1">
                     <div class="cir-stru"><i class="sprits men-cir"></i></div>
@@ -495,7 +495,7 @@
             <div class="contact-elem">
 
                 <div class="cont-layout context1">
-                    <h1>For Partnership Oportunities</h1>
+                    <h1>For Partnership Oportunities:-</h1>
                     <h2>Mansee Mistry</h2>
                     <div class="mail-logo">
                         <h2>Mail : mansee.Mistry@finacial.com</h2>
@@ -506,7 +506,7 @@
                 </div>
 
                 <div class="cont-layout context2">
-                    <h1>For Speaking Opportunities</h1>
+                    <h1>For Speaking Opportunities:-</h1>
                     <h2>Shashank Vishen</h2>
                     <div class="mail-logo">
                         <h2>Mail : shashank.vishen@finacial.com</h2>
@@ -517,7 +517,7 @@
                 </div>
 
                 <div class="cont-layout context3">
-                    <h1>For Delegation Queries</h1>
+                    <h1>For Delegation Queries:-</h1>
                     <h2>Deepika Panwar</h2>
                     <div class="mail-logo">
                         <h2>Mail : Depu.panwar@finacia.com</h2>
@@ -541,7 +541,6 @@
         </div>
     </div>
 </section>            
-
 
 
 
